# Climate-Risk-Project

./: .gitignore  .gitignore.save  README.md  main.py  pyproject.toml
data/: yield_forecasting_ssp1.csv  yield_forecasting_ssp5.csv
references/: references.bib
src/: Calibrazione_Nelson_SIegel_Svenson.ipynb  Credit_Spread_Climate_Notebook_CLEAN.ipynb  Credit_Spread_estimation.ipynb  Prova Climate Spread.ipynb  Yield_Curve_Climate_Model.ipynb  Yield_Curve_Functions.py  pricing.py
